# immigrant

./: Cargo.toml  LICENSE  README.adoc  flake.nix  rust-toolchain.toml
cmds/immigrant/: Cargo.toml
cmds/immigrant-diesel/: Cargo.toml
cmds/immigrant-diesel/src/: main.rs
cmds/immigrant-diesel/tests/: basic.schema
cmds/immigrant-dmdl/: Cargo.toml
cmds/immigrant-dmdl/src/: main.rs
cmds/immigrant-migrate/: Cargo.toml
cmds/immigrant-migrate/src/: main.rs
cmds/immigrant/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/file-diffs/: Cargo.toml
crates/file-diffs/src/: lib.rs  migration.rs  patch_util.rs
crates/generator-postgres/: Cargo.toml
crates/generator-postgres/examples/: kitchen_sink.schema
crates/generator-postgres/src/: escape.rs  lib.rs  validate.rs
crates/schema/: Cargo.toml
crates/schema/src/: annotation.rs  attribute.rs  changelist.rs  column.rs  composite.rs  diagnostics.rs  ids.rs  index.rs  lib.rs  mixin.rs  names.rs  parser.rs  process.rs  root.rs  scalar.rs  sql.rs  table.rs  trigger.rs  uid.rs  view.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs
deno/: deno.json  kitchen_sink.test.ts  mod.ts
deno/__snapshots__/: kitchen_sink.test.ts.snap
docs/: attributes.asciidoc  expressions.asciidoc  foreign-keys.asciidoc  postgres.asciidoc  syntax.asciidoc  tables.asciidoc  views.asciidoc
docs/data-modelling/: _section.adoc  expressions.asciidoc  foreign-keys.asciidoc  postgres.asciidoc  syntax.asciidoc  tables.asciidoc  views.asciidoc
docs/integrations/: _section.adoc  diesel.asciidoc  dmdl.asciidoc
