[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"

[workspace]
members = [
	'crates/*',
	'cmds/*',
]
resolver = "2"

[workspace.dependencies]
schema = { version = "0.2.0", package = "immigrant-schema", path = "crates/schema" }
file-diffs = { version = "0.2.0", package = "immigrant-file-diffs", path = "crates/file-diffs" }
cli = { version = "0.2.0", package = "immigrant-cli", path = "crates/cli" }
generator-postgres = { version = "0.2.0", package = "immigrant-generator-postgres", path = "crates/generator-postgres" }
anyhow = "1.0.100"
hi-doc = "0.3.0"
imara-diff = "0.2.0"
ouroboros = "0.18.5"
patch = "0.7.0"
thiserror = "2.0.17"
clap = { version = "4.5.54", features = ["derive"] }
Inflector = "0.11.4"
tempfile = "3.24.0"
