[package]
name = "immigrant-diesel"
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
schema.workspace = true
cli.workspace = true
file-diffs.workspace = true
anyhow.workspace = true
quote = "1.0.43"
syn = "2.0.114"
proc-macro2 = "1.0.105"
prettyplease = "0.2.37"
rust-format = { version = "0.3.4", features = ["token_stream", "post_process", "pretty_please"] }
Inflector.workspace = true
hi-doc.workspace = true
