[package]
name = "immigrant-dmdl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Immigrant DMDL codegen"

[dependencies]
anyhow.workspace = true
clap.workspace = true
file-diffs.workspace = true
schema.workspace = true
cli.workspace = true
hi-doc.workspace = true
