[package]
name = "immigrant-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Immigrant CLI helper for postgres migration"

[dependencies]
anyhow.workspace = true
cli.workspace = true
file-diffs.workspace = true
futures = "0.3.31"
schema.workspace = true
slug = "0.1.6"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros"] }
tokio = { version = "1.49.0", features = ["macros"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
clap.workspace = true
tracing = "0.1.44"
