[package]
name = "immigrant-migrate"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Immigrant CLI helper for postgres migration"

[dependencies]
anyhow.workspace = true
cli.workspace = true
file-diffs.workspace = true
schema = { workspace = true, features = ["tree-sitter-highlight"] }
slug = "0.1.6"
diesel = { version = "2.3", features = ["postgres"] }
diesel-async = { version = "0.8", features = ["postgres"] }
tokio = { version = "1.49.0", features = ["macros"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
clap.workspace = true
tracing = "0.1.44"
