[package]
name = "immigrant"
version.workspace = true
edition.workspace = true
default-run = "immigrant"
license.workspace = true
description = "Immigrant schema definition language - CLI"

[dependencies]
Inflector.workspace = true
anyhow.workspace = true
clap.workspace = true
peg = "0.8.5"
rand = "0.9.2"
slug = "0.1.6"
tempfile.workspace = true
thiserror.workspace = true
schema.workspace = true
file-diffs.workspace = true
indexmap = "2.13.0"
color-print = "0.3.7"
generator-postgres.workspace = true
cli.workspace = true
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
