[package]
name = "immigrant-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Immigrant shared CLI helpers"

[dependencies]
anyhow.workspace = true
hi-doc.workspace = true
file-diffs.workspace = true
generator-postgres.workspace = true
schema = {workspace = true, features = ["hi-doc"]}
