[package]
name = "immigrant-file-diffs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Immigrant CLI migrations directory format handler"

[dependencies]
imara-diff.workspace = true
ouroboros.workspace = true
patch.workspace = true
thiserror.workspace = true
