[package]
name = "immigrant-web"
version.workspace = true
edition.workspace = true
publish = false
license.workspace = true
description = "Immigrant core JS bindings"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
generator-postgres.workspace = true
schema.workspace = true
wasm-bindgen = "0.2.106"
